fix: align center all fetch errors

--- a/src/components/Loader/Loader.module.css
+++ b/src/components/Loader/Loader.module.css
@@ -1,7 +1,12 @@
 .loader {
+  margin: 50px 0;
   flex-grow: 1;
-  display: inline-block;
-  margin: 50px auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loaderSpinner {
   width: 50px;
   height: 50px;
   border: 3px solid;
