--- a/src/routes/ProductPage/ProductPage.module.css
+++ b/src/routes/ProductPage/ProductPage.module.css
@@ -1,11 +1,8 @@
-.productPageLoaderText {
-  margin: 20px;
-  color: var(--color-text);
-  font-size: 16px;
-  line-height: 20px;
-}
-
 .productPageErrorText {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 20px;
   color: var(--color-text);
   font-size: 16px;
@@ -14,6 +11,9 @@
 
 .productPageNotFoundText {
   flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 20px;
   color: var(--color-text);
   font-size: 16px;
