--- a/src/routes/ProductsPage/ProductsPage.module.css
+++ b/src/routes/ProductsPage/ProductsPage.module.css
@@ -1,13 +1,8 @@
-.productsPageLoaderText {
-  flex-grow: 1;
-  margin: 20px;
-  color: var(--color-text);
-  font-size: 16px;
-  line-height: 20px;
-}
-
 .productsPageErrorText {
   flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 20px;
   color: var(--color-text);
   font-size: 16px;
@@ -16,6 +11,9 @@
 
 .productsNotFoundText {
   flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 20px;
   color: var(--color-text);
   font-size: 16px;
